--- a/new-router/src/common/css/App.css
+++ b/new-router/src/common/css/App.css
@@ -1,47 +1,52 @@
 html {
-    box-sizing: border-box;
-  }
+  box-sizing: border-box;
+}
 
-  *, *::before, *::after {
-    box-sizing: inherit;
-    padding: 0;
-    margin: 0;
-  }
+*, *::before, *::after {
+  box-sizing: inherit;
+  padding: 0;
+  margin: 0;
+}
 
-  .app {
-    width: 960px;
-    margin: 0 auto;
-    padding: 20px;
-  }
+.app {
+  width: 960px;
+  margin: 0 auto;
+  padding: 20px;
+}
 
-  nav ul {
-    list-style: none;
-    display: flex;
-    background-color: black;
-    margin-bottom: 20px;
-  }
+nav ul {
+  list-style: none;
+  display: flex;
+  background-color: black;
+  margin-bottom: 20px;
+}
 
-  nav ul li {
-    padding: 20px;
-  }
+nav ul li {
+  padding: 20px;
+}
 
-  nav ul li a {
-    color: white;
-    text-decoration: none;
-  }
+nav ul li a {
+  color: white;
+  text-decoration: none;
+}
 
-  .current {
-    border-bottom: 4px solid white;
-  }
+.current {
+  border-bottom: 4px solid white;
+}
 
-  h1 {
-    margin-bottom: 20px;
-  }
+h1 {
+  margin-bottom: 20px;
+}
 
-  p {
-    margin-bottom: 15px;
-  }
+p {
+  margin-bottom: 15px;
+}
 
-  .current {
-    border-bottom: 4px solid white;
-  }
+.current {
+  border-bottom: 4px solid white;
+}
+
+.dataTable{
+  padding: 10px;
+  border-style: dotted;
+}
